--- a/chad.store3/.env
+++ b/chad.store3/.env
@@ -1,3 +1,4 @@
-SECKRET_KEY = "bote"
-EMAIL_HOST_USER = "ttttornikeeee@gmail.com"
-EMAIL_HOST_PASSWORD = 'jqfd hijh uwmk tjir'
+# hcwu vaqr ccur teei
+ALLOWED_HOSTS="localhost,127.0.0.1"
+EMAIL_HOST_USER='mate.pkhakadze2010@gmail.com'
+EMAIL_HOST_PASSWORD='hcwu vaqr ccur teei'
