--- a/chad.store3/.env
+++ b/chad.store3/.env
@@ -1,4 +1,14 @@
 # hcwu vaqr ccur teei
-ALLOWED_HOSTS="localhost,127.0.0.1"
-EMAIL_HOST_USER='mate.pkhakadze2010@gmail.com'
-EMAIL_HOST_PASSWORD='hcwu vaqr ccur teei'
+DEBUG = True
+SECRET_KEY= "bote"
+
+EMAIL_HOST_PASSWORD="pass"
+EMAIL_HOST_USER = 'mate.pkhakadze2010@gmail.com'
+
+# ALLOWED_HOSTS="localhost,127.0.0.1"
+# EMAIL_HOST_USER='mate.pkhakadze2010@gmail.com'
+# EMAIL_HOST_PASSWORD='hcwu vaqr ccur teei'
+
+POSTGRES_DB = "data_base"
+POSTGRES_USER = "toko"
+POSTGRES_PASSWORD = "botiko"
