--- a/chad.store3/docker-compose.yml
+++ b/chad.store3/docker-compose.yml
@@ -36,7 +36,22 @@ services:
       - "5432:5432"
     networks:
       - app_network
-
+    
+  celery:
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    command: celery -A config worker --loglevel=info
+    env_file:
+      - .env
+    depends_on:
+      - db
+      - redis
+    volumes:
+      - ./media:/app/media
+    networks:
+      - app_network
+      
 networks:
   app_network:
     driver: bridge
